--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,3 +8,6 @@
   
   %body.index{id: 'page-top'}
     = yield
+
+  %script{:type => "text/javascript",
+        	:src  => "http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"}
