--- a/app/assets/stylesheets/template/agency.css.erb
+++ b/app/assets/stylesheets/template/agency.css.erb
@@ -252,7 +252,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 header {
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(<%= image_url('header-bg.jpg') %>);
     background-repeat: none;
     background-attachment: scroll;
     background-position: center center;
