Updated the homepage

--- a/app/views/static/_main.html.haml
+++ b/app/views/static/_main.html.haml
@@ -1,6 +1,6 @@
 %header
   .container
     .intro-text
-      .intro-lead-in Welcome To Our Studio!
-      .intro-heading It's Nice To Meet You
-      %a.page-scroll.btn.btn-xl{:href => "#services"} Tell Me More
+      .intro-lead-in Welcome to IT Scaffold
+      .intro-heading We're Ready to Build Your Dreams
+      %a.page-scroll.btn.btn-xl{href: "#services"} See what it's all about
