--- a/app/views/static/_services.html.haml
+++ b/app/views/static/_services.html.haml
@@ -1,26 +1,53 @@
-/ Services Section
+/ About Section
 %section#services
   .container
     .row
       .col-lg-12.text-center
-        %h2.section-heading Services
+        %h2.section-heading About
         %h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
-    .row.text-center
-      .col-md-4
-        %span.fa-stack.fa-4x
-          %i.fa.fa-circle.fa-stack-2x.text-primary
-          %i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
-        %h4.service-heading E-Commerce
-        %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-      .col-md-4
-        %span.fa-stack.fa-4x
-          %i.fa.fa-circle.fa-stack-2x.text-primary
-          %i.fa.fa-laptop.fa-stack-1x.fa-inverse
-        %h4.service-heading Responsive Design
-        %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-      .col-md-4
-        %span.fa-stack.fa-4x
-          %i.fa.fa-circle.fa-stack-2x.text-primary
-          %i.fa.fa-lock.fa-stack-1x.fa-inverse
-        %h4.service-heading Web Security
-        %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+    .row
+      .col-lg-12
+        %ul.timeline
+          %li
+            .timeline-image
+              %img.img-circle.img-responsive{:alt => "", :src => "img/about/1.jpg"}
+            .timeline-panel
+              .timeline-heading
+                %h4 2009-2011
+                %h4.subheading Our Humble Beginnings
+              .timeline-body
+                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+          %li.timeline-inverted
+            .timeline-image
+              %img.img-circle.img-responsive{:alt => "", :src => "img/about/2.jpg"}
+            .timeline-panel
+              .timeline-heading
+                %h4 March 2011
+                %h4.subheading An Agency is Born
+              .timeline-body
+                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+          %li
+            .timeline-image
+              %img.img-circle.img-responsive{:alt => "", :src => "img/about/3.jpg"}
+            .timeline-panel
+              .timeline-heading
+                %h4 December 2012
+                %h4.subheading Transition to Full Service
+              .timeline-body
+                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+          %li.timeline-inverted
+            .timeline-image
+              %img.img-circle.img-responsive{:alt => "", :src => "img/about/4.jpg"}
+            .timeline-panel
+              .timeline-heading
+                %h4 July 2014
+                %h4.subheading Phase Two Expansion
+              .timeline-body
+                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+          %li.timeline-inverted
+            .timeline-image
+              %h4
+                Be Part
+                %br
+                  Of Our
+                  %br Story!
