--- a/app/views/static/_about.html.haml
+++ b/app/views/static/_about.html.haml
@@ -1,53 +1,28 @@
-/ About Section
+/ Services Section
 %section#about
   .container
     .row
       .col-lg-12.text-center
-        %h2.section-heading About
-        %h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
-    .row
-      .col-lg-12
-        %ul.timeline
-          %li
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/1.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 2009-2011
-                %h4.subheading Our Humble Beginnings
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li.timeline-inverted
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/2.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 March 2011
-                %h4.subheading An Agency is Born
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/3.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 December 2012
-                %h4.subheading Transition to Full Service
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li.timeline-inverted
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/4.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 July 2014
-                %h4.subheading Phase Two Expansion
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li.timeline-inverted
-            .timeline-image
-              %h4
-                Be Part
-                %br
-                  Of Our
-                  %br Story!
+        %h2.section-heading Mission / Vision / Values
+        %h3.section-subheading.text-muted What we believe in
+    .row.text-center
+      .col-md-4
+        %span.fa-stack.fa-4x
+          %i.fa.fa-circle.fa-stack-2x.text-primary
+          %i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
+        %h4.service-heading Mission
+        %p.text-muted Provide tailored IT solutions to help businesses get work done efficiently.
+
+      .col-md-4
+        %span.fa-stack.fa-4x
+          %i.fa.fa-circle.fa-stack-2x.text-primary
+          %i.fa.fa-laptop.fa-stack-1x.fa-inverse
+        %h4.service-heading Vision
+        %p.text-muted Be the market leader in delivering integrated IT solutions to match our client's needs.
+
+      .col-md-4
+        %span.fa-stack.fa-4x
+          %i.fa.fa-circle.fa-stack-2x.text-primary
+          %i.fa.fa-lock.fa-stack-1x.fa-inverse
+        %h4.service-heading Values
+        %p.text-muted Craftsmanship, Efficiency, Clarity
