Updated the services section

--- a/app/views/static/_main.html.haml
+++ b/app/views/static/_main.html.haml
@@ -2,5 +2,5 @@
   .container
     .intro-text
       .intro-lead-in Welcome to IT Scaffold
-      .intro-heading We're Ready to Build Your Dreams
-      %a.page-scroll.btn.btn-xl{href: "#services"} See what it's all about
+      .intro-heading Your Enterprise Technology Partner
+      %a.page-scroll.btn.btn-xl{href: "#about"} More Information
