--- a/app/views/static/_services.html.haml
+++ b/app/views/static/_services.html.haml
@@ -1,53 +1,41 @@
-/ About Section
-%section#services
+%section#services.bg-light-gray
   .container
     .row
       .col-lg-12.text-center
-        %h2.section-heading About
-        %h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+        %h2.section-heading Our Services
+        %h3.section-subheading.text-muted How we help enterprises succeed.
     .row
-      .col-lg-12
-        %ul.timeline
-          %li
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/1.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 2009-2011
-                %h4.subheading Our Humble Beginnings
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li.timeline-inverted
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/2.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 March 2011
-                %h4.subheading An Agency is Born
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/3.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 December 2012
-                %h4.subheading Transition to Full Service
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li.timeline-inverted
-            .timeline-image
-              %img.img-circle.img-responsive{:alt => "", :src => "img/about/4.jpg"}
-            .timeline-panel
-              .timeline-heading
-                %h4 July 2014
-                %h4.subheading Phase Two Expansion
-              .timeline-body
-                %p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-          %li.timeline-inverted
-            .timeline-image
-              %h4
-                Be Part
-                %br
-                  Of Our
-                  %br Story!
+      .col-sm-4
+        .team-member
+          %img.img-responsive.img-circle{:alt => "", :src => "img/team/1.jpg"}
+            %h4 Enterprise business setup
+            %p.text-muted email, file sharing
+      .col-sm-4
+        .team-member
+          %img.img-responsive.img-circle{:alt => "", :src => "img/team/2.jpg"}
+            %h4 Employee Management
+            %p.text-muted ERP Systems, accounting software, EDI configuration
+      .col-sm-4
+        .team-member
+          %img.img-responsive.img-circle{:alt => "", :src => "img/team/3.jpg"}
+            %h4 Mobile
+            %p.text-muted iOS/Android apps, mobile app integrations
+    .row
+      .col-sm-4
+        .team-member
+          %img.img-responsive.img-circle{:alt => "", :src => "img/team/1.jpg"}
+            %h4 Accounting
+            %p.text-muted ERP systems, accounting software, EDI configuration
+      .col-sm-4
+        .team-member
+          %img.img-responsive.img-circle{:alt => "", :src => "img/team/2.jpg"}
+            %h4 Data Management
+            %p.text-muted Databases, data science, server deployment / management
+      .col-sm-4
+        .team-member
+          %img.img-responsive.img-circle{:alt => "", :src => "img/team/3.jpg"}
+            %h4 Marketing
+            %p.text-muted Web design, search engine optimization, content marketing
+    .row
+      .col-lg-8.col-lg-offset-2.text-center
+        %p.large.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
