Added the services and partner page

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -21,4 +21,6 @@
         %li
           %a.page-scroll{:href => "#services"} Services
         %li
+          %a.page-scroll{:href => "#partners"} Partners
+        %li
           %a.page-scroll{:href => "#contact"} Contact
