--- a/app/views/static/_services.html.haml
+++ b/app/views/static/_services.html.haml
@@ -7,35 +7,35 @@
     .row
       .col-sm-4
         .team-member
-          %img.img-responsive.img-circle{:alt => "", :src => "img/team/1.jpg"}
+          %img.img-responsive.img-circle{:alt => "", :src => "#{image_url('about/enterprise.png')}"}
             %h4 Enterprise business setup
             %p.text-muted email, file sharing
       .col-sm-4
         .team-member
-          %img.img-responsive.img-circle{:alt => "", :src => "img/team/2.jpg"}
+          %img.img-responsive.img-circle{:alt => "", :src => "#{image_url('about/employeemanagement.png')}"}
             %h4 Employee Management
             %p.text-muted ERP Systems, accounting software, EDI configuration
       .col-sm-4
         .team-member
-          %img.img-responsive.img-circle{:alt => "", :src => "img/team/3.jpg"}
+          %img.img-responsive.img-circle{:alt => "", :src => "#{image_url('about/mobile.png')}"}
             %h4 Mobile
             %p.text-muted iOS/Android apps, mobile app integrations
     .row
       .col-sm-4
         .team-member
-          %img.img-responsive.img-circle{:alt => "", :src => "img/team/1.jpg"}
+          %img.img-responsive.img-rounded{:alt => "", :src => "#{image_url('about/accounting.png')}"}
             %h4 Accounting
             %p.text-muted ERP systems, accounting software, EDI configuration
       .col-sm-4
         .team-member
-          %img.img-responsive.img-circle{:alt => "", :src => "img/team/2.jpg"}
+          %img.img-responsive.img-circle{:alt => "", :src => "#{image_url('about/datamanagement.png')}"}
             %h4 Data Management
             %p.text-muted Databases, data science, server deployment / management
       .col-sm-4
         .team-member
-          %img.img-responsive.img-circle{:alt => "", :src => "img/team/3.jpg"}
+          %img.img-responsive.img-circle{:alt => "", :src => "#{image_url('about/marketing.png')}"}
             %h4 Marketing
             %p.text-muted Web design, search engine optimization, content marketing
     .row
       .col-lg-8.col-lg-offset-2.text-center
-        %p.large.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
+        %p.large.text-muted We follow various project management workflows in order to implement each component into your business as efficiently as possible. This includes agile methodologies with an emphasis on transparency, so that you know all of the work that's performed each day.
