--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -3,7 +3,7 @@
 = render 'about'
 = render 'portfolio'
 = render 'services'
-= render 'clients'
+= render 'partners'
 = render 'shared/contact'
 = render 'shared/footer'
 = render 'portfolio_modals'
