Updated portfolio thumbs

--- a/app/views/static/_portfolio.html.haml
+++ b/app/views/static/_portfolio.html.haml
@@ -4,59 +4,59 @@
     .row
       .col-lg-12.text-center
         %h2.section-heading Portfolio
-        %h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+        %h3.section-subheading.text-muted A few of our projects.
     .row
       .col-md-4.col-sm-6.portfolio-item
         %a.portfolio-link{"data-toggle" => "modal", :href => "#portfolioModal1"}
           .portfolio-hover
             .portfolio-hover-content
               %i.fa.fa-plus.fa-3x
-          %img.img-responsive{:alt => "", :src => "img/portfolio/roundicons.png"}
+          %img.img-responsive{:alt => "", :src => "#{image_url('portfolio/eventbrite.jpg')}"}
         .portfolio-caption
-          %h4 Round Icons
-          %p.text-muted Graphic Design
+          %h4 Eventbrite
+          %p.text-muted Web Development
       .col-md-4.col-sm-6.portfolio-item
         %a.portfolio-link{"data-toggle" => "modal", :href => "#portfolioModal2"}
           .portfolio-hover
             .portfolio-hover-content
               %i.fa.fa-plus.fa-3x
-          %img.img-responsive{:alt => "", :src => "img/portfolio/startup-framework.png"}
+          %img.img-responsive{:alt => "", :src => "#{image_url('portfolio/expanse.jpg')}"}
         .portfolio-caption
-          %h4 Startup Framework
-          %p.text-muted Website Design
+          %h4 Expanse Energy
+          %p.text-muted Web and Mobile Development
       .col-md-4.col-sm-6.portfolio-item
         %a.portfolio-link{"data-toggle" => "modal", :href => "#portfolioModal3"}
           .portfolio-hover
             .portfolio-hover-content
               %i.fa.fa-plus.fa-3x
-          %img.img-responsive{:alt => "", :src => "img/portfolio/treehouse.png"}
+          %img.img-responsive{:alt => "", :src => "#{image_url('portfolio/ms.jpg')}"}
         .portfolio-caption
-          %h4 Treehouse
-          %p.text-muted Website Design
+          %h4 MinistrySafe
+          %p.text-muted Web Development
       .col-md-4.col-sm-6.portfolio-item
         %a.portfolio-link{"data-toggle" => "modal", :href => "#portfolioModal4"}
           .portfolio-hover
             .portfolio-hover-content
               %i.fa.fa-plus.fa-3x
-          %img.img-responsive{:alt => "", :src => "img/portfolio/golden.png"}
+          %img.img-responsive{:alt => "", :src => "#{image_url('portfolio/trackr.jpg')}"}
         .portfolio-caption
-          %h4 Golden
-          %p.text-muted Website Design
+          %h4 Trackr
+          %p.text-muted Mobile Development
       .col-md-4.col-sm-6.portfolio-item
         %a.portfolio-link{"data-toggle" => "modal", :href => "#portfolioModal5"}
           .portfolio-hover
             .portfolio-hover-content
               %i.fa.fa-plus.fa-3x
-          %img.img-responsive{:alt => "", :src => "img/portfolio/escape.png"}
+          %img.img-responsive{:alt => "", :src => "#{image_url('portfolio/wlp.jpg')}"}
         .portfolio-caption
-          %h4 Escape
-          %p.text-muted Website Design
+          %h4 WLP Energy
+          %p.text-muted Data Science
       .col-md-4.col-sm-6.portfolio-item
         %a.portfolio-link{"data-toggle" => "modal", :href => "#portfolioModal6"}
           .portfolio-hover
             .portfolio-hover-content
               %i.fa.fa-plus.fa-3x
-          %img.img-responsive{:alt => "", :src => "img/portfolio/dreams.png"}
+          %img.img-responsive{:alt => "", :src => "#{image_url('portfolio/crudelist.jpg')}"}
         .portfolio-caption
-          %h4 Dreams
-          %p.text-muted Website Design
+          %h4 Crudelist
+          %p.text-muted Web Development
