--- a/app/views/static/_portfolio_modals.html.haml
+++ b/app/views/static/_portfolio_modals.html.haml
@@ -11,22 +11,14 @@
         .col-lg-8.col-lg-offset-2
           .modal-body
             / Project Details Go Here
-            %h2 Project Name
-            %p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-            %img.img-responsive.img-centered{:alt => "", :src => "img/portfolio/roundicons-free.png"}
-              %p Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!
-              %p
-                %strong> Want these icons in this portfolio item sample?
-                You can download 60 of them for free, courtesy of
-                = succeed "," do
-                  %a{:href => "https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc"} RoundIcons.com
-                or you can purchase the 1500 icon set
-                = succeed "." do
-                  %a{:href => "https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc"} here
+            %h2 Eventbrite
+            %p.item-intro.text-muted Web Development
+            %img.img-responsive.img-centered{:alt => "", :src => "#{image_url('portfolio/eventbrite_large.jpg')}"}
+              %p Eventbrite is the leading event management platform on the web with millions of individuals utilizing their applications to find, register or, and management events in numerous industries. Since starting to consult for Eventbrite I have been tasked with building out web applications from scratch in Ruby on Rails, along with extending the functionality of legacy applications, and working on developing custom libraries for their APIs.
+
+              %p In building out these applications, I have been able to work on applications that are both enterprise and consumer facing, working with: Ruby on Rails and JavaScript. As would be expected with working with organizations such as Eventbrite, the projects follow development best practices, including: following agile methodology, daily updates to the project managers, version control and unit testing
               %ul.list-inline
-                %li Date: July 2014
-                %li Client: Round Icons
-                %li Category: Graphic Design
+                %li Date: Jan 2016
               %button.btn.btn-primary{"data-dismiss" => "modal", :type => "button"}
                 %i.fa.fa-times
                 Close Project
@@ -40,16 +32,14 @@
       .row
         .col-lg-8.col-lg-offset-2
           .modal-body
-            %h2 Project Heading
-            %p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-            %img.img-responsive.img-centered{:alt => "", :src => "img/portfolio/startup-framework-preview.png"}
+            %h2 Expanse Energy
+            %p.item-intro.text-muted Web and Mobile Development
+            %img.img-responsive.img-centered{:alt => "", :src => "#{image_url('portfolio/expanse_large.png')}"}
               %p
-                %a{:href => "http://designmodo.com/startup/?u=787"} Startup Framework
-                is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.
+                Expanse Energy ecompasses 8 companies with 800+ employees across the US. We have developed both web and mobile applications that are utilized across the organization.
+
               %p
-                You can preview Startup Framework
-                = succeed "." do
-                  %a{:href => "http://designmodo.com/startup/?u=787"} here
+                In addition to traditional development projects, we have also focused on integrating Expanse's enterprise solutions with each project that we've worked on. This translates into building integrations with Microsoft ActiveDirectory and SharePoint. These integrations allow the organization to continue with its day to day operations while allowing for custom solutions.
               %button.btn.btn-primary{"data-dismiss" => "modal", :type => "button"}
                 %i.fa.fa-times
                 Close Project
@@ -64,18 +54,13 @@
         .col-lg-8.col-lg-offset-2
           .modal-body
             / Project Details Go Here
-            %h2 Project Name
-            %p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-            %img.img-responsive.img-centered{:alt => "", :src => "img/portfolio/treehouse-preview.png"}
+            %h2 Ministry Safe
+            %p.item-intro.text-muted Web Development 
+            %img.img-responsive.img-centered{:alt => "", :src => "#{image_url('portfolio/ministrysafe_large.png')}"}
               %p
-                Treehouse is a free PSD web template built by
-                = succeed "." do
-                  %a{:href => "https://www.behance.net/MathavanJaya"} Mathavan Jaya
-                This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.
+                Ministry Safe is one of the leading training systems in the marketplace for employee safety.
               %p
-                You can download the PSD template in this portfolio sample item at
-                = succeed "." do
-                  %a{:href => "http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/"} FreebiesXpress.com
+                Initially we began with managing Ministry Safe's legacy web application. Soon after taking over technical management of the application we were asked to build a new training system for the organization from scratch. We spent the past year building out a completely new system that is used by tens of thousands of users daily and matches the organization requirements.
               %button.btn.btn-primary{"data-dismiss" => "modal", :type => "button"}
                 %i.fa.fa-times
                 Close Project
@@ -90,18 +75,13 @@
         .col-lg-8.col-lg-offset-2
           .modal-body
             / Project Details Go Here
-            %h2 Project Name
-            %p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-            %img.img-responsive.img-centered{:alt => "", :src => "img/portfolio/golden-preview.png"}
+            %h2 Trackr
+            %p.item-intro.text-muted Web and Mobile Development
+            %img.img-responsive.img-centered{:alt => "", :src => "#{image_url('portfolio/trackr_large.png')}"}
               %p
-                Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by
-                = succeed "." do
-                  %a{:href => "https://www.behance.net/MathavanJaya"} Mathavan Jaya
-                Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.
+                Trackr was one of the original employee tracking applications for the energy services industry.
               %p
-                You can download the PSD template in this portfolio sample item at
-                = succeed "." do
-                  %a{:href => "http://freebiesxpress.com/gallery/golden-free-one-page-web-template/"} FreebiesXpress.com
+                In addition to mobile tracking of employees, the Trackr system also incorporates a comprehensive web dashboard that manages: payroll, asset utilizations, and oil field mapping for the companies that utilize the system.
               %button.btn.btn-primary{"data-dismiss" => "modal", :type => "button"}
                 %i.fa.fa-times
                 Close Project
@@ -116,18 +96,13 @@
         .col-lg-8.col-lg-offset-2
           .modal-body
             / Project Details Go Here
-            %h2 Project Name
-            %p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-            %img.img-responsive.img-centered{:alt => "", :src => "img/portfolio/escape-preview.png"}
+            %h2 WLP Energy
+            %p.item-intro.text-muted Web Development
+            %img.img-responsive.img-centered{:alt => "", :src => "#{image_url('portfolio/wlp_large.png')}"}
               %p
-                Escape is a free PSD web template built by
-                = succeed "." do
-                  %a{:href => "https://www.behance.net/MathavanJaya"} Mathavan Jaya
-                Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.
+                Wilson Systems and WLP Energy are the leading oil field services and SWD providers in the West Texas region.
               %p
-                You can download the PSD template in this portfolio sample item at
-                = succeed "." do
-                  %a{:href => "http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/"} FreebiesXpress.com
+                We have built out multiple internal systems for the WLP and Wilson companies that allow them to manage day to day operations. These web applications include Ruby on Rails systems that are used in the office and in the field.
               %button.btn.btn-primary{"data-dismiss" => "modal", :type => "button"}
                 %i.fa.fa-times
                 Close Project
@@ -142,18 +117,13 @@
         .col-lg-8.col-lg-offset-2
           .modal-body
             / Project Details Go Here
-            %h2 Project Name
-            %p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-            %img.img-responsive.img-centered{:alt => "", :src => "img/portfolio/dreams-preview.png"}
+            %h2 CrudeList
+            %p.item-intro.text-muted Web Development
+            %img.img-responsive.img-centered{:alt => "", :src => "#{image_url('portfolio/crudelist_large.png')}"}
               %p
-                Dreams is a free PSD web template built by
-                = succeed "." do
-                  %a{:href => "https://www.behance.net/MathavanJaya"} Mathavan Jaya
-                Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.
+                CrudeList offers a full directory of energy services throughout the US.
               %p
-                You can download the PSD template in this portfolio sample item at
-                = succeed "." do
-                  %a{:href => "http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/"} FreebiesXpress.com
+                IT Scaffold has built the CrudeList system from scratch. Including the UI and backend Ruby on Rails application.
               %button.btn.btn-primary{"data-dismiss" => "modal", :type => "button"}
                 %i.fa.fa-times
                 Close Project
