Implemented basic blog with styles

--- a/app/views/blogs/_blog_footer.html.erb
+++ b/app/views/blogs/_blog_footer.html.erb
@@ -10,7 +10,7 @@
 					<div class="post-recent-widget">
 						<div class="row">
 							<div class="col-sm-12">
-								<% @blogs.each do |blog| %>
+								<% @recent_blogs.each do |blog| %>
 									<div class="media">
 										<div class="media-body">
 											<h4 class="media-heading"><%= link_to blog.title, blog %></h4>
