--- a/app/views/blogs/_blog_nav.html.erb
+++ b/app/views/blogs/_blog_nav.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="nav-header">
 			<a class="nav-brand" href="<%= root_url %>">
-				<%= image_tag('header-logo.png', width: 225, class: 'logo') %>
+				<%= image_tag('header-logo-white.png', width: 225, class: 'logo') %>
 			</a>
 
 			<%= link_to "Homepage", root_path, class: 'btn btn-blog outline-white pull-right' %>
