--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -25,32 +25,20 @@
         <br>
 
         <%= form_for @blog do |f| %>
-          <%= render partial: 'shared/validations', locals: { model_object: @blog } %>
+          <%= render partial: 'validations', locals: { model_object: @blog } %>
 
           <%= f.label :title, class: 'form-label' %>
           <%= f.text_field :title, class: 'form-control input-lg' %><br>
 
-          <%= f.label :blog_url, class: 'form-label' %>
-          <%= f.text_field :blog_url, class: 'form-control input-lg' %><br>
-
-          <%= f.label :summary, class: 'form-label' %>
-          <%= f.text_field :summary, class: 'form-control input-lg' %><br>
-
-          <%= f.label :seo_keywords, class: 'form-label' %>
-          <%= f.text_field :seo_keywords, class: 'form-control input-lg' %><br>
-
-          <%= f.label :post_status, class: 'form-label' %>
-          <%= f.select :post_status, options_for_select(guide_status_enum, @blog.post_status), {include_blank: false}, { class: 'form-control input-lg' } %><br>
-
           <div class="row">
             <div class="col-md-6">
-              <label class="form-label">Content</label>
+              <label class="form-label">Body</label>
             </div>
             <div class="col-md-6 pull-right">
               <span class="help label label-default pull-right">Markdown Supported</span>
             </div>
           </div>
-          <%= f.text_area :content, class: 'form-control' %><br>
+          <%= f.text_area :body, class: 'form-control' %><br>
 
           <%= f.submit "Save", class: 'btn btn-lg btn-default' %>
         <% end %>
