Updated navigation to include blog

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -25,3 +25,5 @@
           %a.page-scroll{:href => "#partners"} Partners
         %li
           %a.page-scroll{:href => "#contact"} Contact
+        %li
+          = link_to 'Blog', blogs_path
