--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -6,6 +6,7 @@
 		<div class="container welcome-content">
 			<div class="middle-text">
 				<h1><%= @blog.title %></h1>
+				<h3><%= @blog.summary %></h3>
 			</div>
 		</div>
 	</section>
